<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2018 Jeremy Jamet / Kunzisoft.

 This file is part of KeePass DX.

  KeePass DX is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePass DX is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePass DX.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/entry_category">
        <Preference
            android:key="@string/entry_timeout_key"
            android:title="@string/entry_timeout_title"
            android:summary="@string/entry_timeout_summary" />
        <SwitchPreference
            android:key="@string/notification_entry_key"
            android:title="@string/notification_entry_title"
            android:summary="@string/notification_entry_summary"
            android:defaultValue="@bool/notification_entry_default"/>
        <SwitchPreference
            android:key="@string/notification_entry_clear_close_key"
            android:title="@string/notification_entry_clear_close_title"
            android:summary="@string/notification_entry_clear_close_summary"
            android:dependency="@string/notification_entry_key"
            android:defaultValue="@bool/notification_entry_clear_close_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/appearance_category">
        <Preference
            android:key="@string/theme_key"
            android:title="@string/theme_title"
            android:summary="dark"
            android:enabled="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/keys_category">
        <SwitchPreference
            android:key="@string/key_vibrate_key"
            android:title="@string/key_vibrate_title"
            android:defaultValue="@bool/key_vibrate_default"
            android:enabled="false"/>
        <Preference
            android:key="@string/key_vibrate_duration_key"
            android:title="@string/key_vibrate_duration_title"
            android:enabled="false"/>
        <SwitchPreference
            android:key="@string/key_sound_key"
            android:defaultValue="@bool/key_sound_default"
            android:title="@string/key_sound_title" />
        <Preference
            android:key="@string/key_long_press_delay_key"
            android:title="@string/key_long_press_delay_title"
            android:enabled="false" />
    </PreferenceCategory>
</PreferenceScreen>